Refactor /users/find method
