# src/handlers/presenters/friendshipPresenter.ts
@@ -1,6 +1,15 @@
+import { IFriendshipDocument } from '../../models/friendship';
 import UserPresenter, { IUserClientData } from './userPresenter';
 
 interface IFriendshipClientData {
+  accepted: boolean;
+  id: string;
+  receiverId: string;
+  senderId: string;
+}
+
+/** @deprecated */
+interface IFriendshipClientDataOld {
   [key: string]: any;
 
   accepted: boolean;
@@ -10,7 +19,17 @@ interface IFriendshipClientData {
 }
 
 const FriendshipPresenter = {
-  getData(friendship: any): IFriendshipClientData {
+  getData(friendship: IFriendshipDocument): IFriendshipClientData {
+    return {
+      accepted: friendship.accepted,
+      id: friendship._id,
+      receiverId: friendship.receiverId.toString(),
+      senderId: friendship.senderId.toString(),
+    };
+  },
+
+  /** @deprecated */
+  getDataOld(friendship: any): IFriendshipClientDataOld {
     return {
       accepted: friendship.accepted,
       id: friendship._id,
